[package]
name = "maximum-number-of-balloons-parallel"
version = "0.1.0"
authors = ["El Mehdi ASSALI <assalielmehdi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "*"
rayon = "*"
fast-tracer={git="https://github.com/wagnerf42/fast-tracer"}